fix: overflow da index

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,10 @@ body.index-page .contact {
     display:none !important;
 }
 
+body.index-page {
+    overflow-y: hidden;
+}
+
 .menu-toggle:checked + .hamburger span:nth-child(1){
     transform: translateY(8px) rotate(45deg);
 }
@@ -270,9 +274,17 @@ button.btn{
     position:relative; /* necessário para overlay */
     width:100%;
     max-width:500px;
+    height: 99%;
     overflow:hidden;
     margin:auto;
     z-index:0;
+    border-radius:24px;
+    box-shadow:0 0 40px rgba(255,255,255,0.15);
+    transition:transform 0.3s ease;
+}
+
+.images:hover{
+    transform:scale(1.05);
 }
 
 /* IMAGEM PRINCIPAL */
